# serializer version: 1
# name: test_entity_and_device_data[firewall_policy_payload0][time.unifi_network_block_streaming_schedule_end-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.unifi_network_block_streaming_schedule_end',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Block streaming schedule end',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Block streaming schedule end',
    'platform': 'unifi',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'firewall_policy_schedule_end',
    'unique_id': 'firewall_policy_schedule_end-678ceb9fe3849d293243405c',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[firewall_policy_payload0][time.unifi_network_block_streaming_schedule_end-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'UniFi Network Block streaming schedule end',
    }),
    'context': <ANY>,
    'entity_id': 'time.unifi_network_block_streaming_schedule_end',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '08:00:00',
  })
# ---
# name: test_entity_and_device_data[firewall_policy_payload0][time.unifi_network_block_streaming_schedule_start-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'time',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'time.unifi_network_block_streaming_schedule_start',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Block streaming schedule start',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Block streaming schedule start',
    'platform': 'unifi',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'firewall_policy_schedule_start',
    'unique_id': 'firewall_policy_schedule_start-678ceb9fe3849d293243405c',
    'unit_of_measurement': None,
  })
# ---
# name: test_entity_and_device_data[firewall_policy_payload0][time.unifi_network_block_streaming_schedule_start-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'UniFi Network Block streaming schedule start',
    }),
    'context': <ANY>,
    'entity_id': 'time.unifi_network_block_streaming_schedule_start',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '21:00:00',
  })
# ---
